# esp32_gui

./: CMakeLists.txt  sdkconfig  sdkconfig.ft6xx  sdkconfig.old  sdkconfig.xpt2046
lvgl_esp32_drivers/: lvgl_helpers.h
main/: CMakeLists.txt  main.c
